<resources>
    <string name="app_name">Cround</string>

    <string name="fragment_signIn_editText_username">Email or Username</string>
    <string name="fragment_signIn_editText_password">Password</string>
    <string name="fragment_signIn_textView_signIn_text">Sign In</string>
    <string name="fragment_signIn_textView_signUp_text"><u>I don\'t have an account</u></string>
    <string name="fragment_signIn_textView_hint_invalidCredentials">Invalid credentials</string>

    <string name="fragment_signUp_textView_signUp_text">Sign Up</string>
    <string name="fragment_signUp_textView_signIn_text"><u>I already have an account</u></string>
    <string name="fragment_signUp_editText_email">Email</string>
    <string name="fragment_signUp_editText_username">Username</string>
    <string name="fragment_signUp_textView_hint_allRequired">All fields are required</string>
    <string name="fragment_signUp_textView_hint_longUsername">Username must be at most 20 characters long</string>
    <string name="fragment_signUp_textView_hint_invalidUsername">Username can only be alphanumeric or have - or _</string>
    <string name="fragment_signUp_textView_hint_usernameStartEnd">Username cannot start or end with - or _</string>
    <string name="fragment_signUp_textView_hint_invalidEmail">Email is invalid</string>
    <string name="fragment_signUp_textView_hint_shortPassword">Password must be at least 10 characters long.</string>
    <string name="fragment_signUp_textView_hint_longPassword">Password must be at most 60 characters long.</string>
    <string name="fragment_signUp_textView_hint_passwordNumbers">Password must have numbers.</string>
    <string name="fragment_signUp_textView_hint_passwordLowercase">Password must have lowercase letters.</string>
    <string name="fragment_signUp_textView_hint_passwordUppercase">Password must have uppercase letters.</string>
    <string name="fragment_signUp_textView_hint_invalidPassword"><![CDATA[Password can only contain the special characters !@#$%^&*-_+=?]]></string>
    <string name="fragment_signUp_textView_hint_usernameExists">Username may already exist</string>
    <string name="fragment_signUp_textView_hint_emailExists">Email may already exist</string>

    <string name="menu_drawer_header_name">Name</string>
    <string name="menu_drawer_header_username">Username</string>
    <string name="menu_drawer_header_points">Points</string>

    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_signout">Sign Out</string>

    <string name="menu_timeline">Timeline</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete_account_setting_dialog_title">"Delete Account?"</string>
    <string name="field_password_hint">"Password"</string>
    <string name="delete_account_setting_dialog_message">"This will permanently delete your account and all your data.\n\nType in your password to confirm."</string>
    <string name="delete_account_setting_dialog_affirmative">"Delete account"</string>
    <string name="cancel">"Cancel"</string>
    <string name="fragment_userProfile_bio">User bio</string>
    <string name="fragment_userProfile_tab_posts_text">Posts</string>
    <string name="fragment_userProfile_tab_replies_text">Replies</string>
</resources>