<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/menu_drawer_header_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/menu_drawer_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_drawer_header_name"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/menu_drawer_header_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_drawer_header_username"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/menu_drawer_header_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_drawer_header_points"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>