<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/fragment_user_profile_materialToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/fui_transparent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/test_header"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_margin="10dp"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/menu_drawer_header_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/yee" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/fragment_user_profile_displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_drawer_header_name"
                android:layout_margin="5dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <TextView
                android:id="@+id/fragment_user_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_drawer_header_username"
                android:layout_margin="5dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            <TextView
                android:id="@+id/fragment_user_profile_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_userProfile_bio"
                android:layout_margin="5dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_userProfile_tab_posts_text">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_userProfile_tab_replies_text">
            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>