<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.SignInFragment">

    <TextView
        android:id="@+id/fragment_signIn_textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fragment_signIn_imageView_appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_signIn_imageView_appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fragment_signUp_linearLayout_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_signIn_textView_appName"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/fragment_signUp_linearLayout_form"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_signIn_imageView_appLogo"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/fragment_signIn_editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_signIn_editText_username"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            app:layout_constraintBottom_toTopOf="@+id/fragment_signIn_editText_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent" />

        <EditText
            android:id="@+id/fragment_signIn_editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_signIn_editText_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintBottom_toTopOf="@+id/fragment_signUp_linearLayout_form_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signIn_editText_username" />

        <TextView
            android:id="@+id/fragment_signIn_textView_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha=".5"
            android:text="Hint"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/fragment_signUp_linearLayout_form_buttons"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/fragment_signIn_editText_password">

            <Button
                android:id="@+id/fragment_signIn_button_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/fragment_signIn_textView_signIn_text"
                app:layout_constraintBottom_toTopOf="@+id/fragment_signIn_textView_signUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/fragment_signIn_textView_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/fragment_signIn_textView_signUp_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_signIn_button_signIn"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/selectableItemBackground" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>